Fix native Lichess flag being too small

--- a/tools/showFlags/tool.css
+++ b/tools/showFlags/tool.css
@@ -7,7 +7,8 @@ body.lichessTools img.flag {
   margin-right: auto;
 }
 
-body.lichessTools .fide-federation img.flag {
+body.lichessTools .fide-federation img.flag,
+body.lichessTools .upt__info img.flag {
   max-height: none;
 }
 
